...
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <!-- Item Name -->
                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/specifications"
                    android:hint="Item Name"
                    android:inputType="textPersonName"
...
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:background="@drawable/img_2" />
            </LinearLayout>

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/specifications"
                android:gravity="top|left"
                android:hint="Description"
                android:inputType="textMultiLine"
...
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/itemDate"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:background="@drawable/baseline_calendar_month_24"
                    android:textColor="#7E7979"
                    android:textSize="18sp"
                    android:textStyle="bold" />




                <!-- Value -->
                <EditText
                    android:id="@+id/itemValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Value"
                    android:background="@drawable/specifications"
                    android:inputType="numberDecimal"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Serial Number -->
                <EditText
                    android:id="@+id/itemSerialNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Serial Number"
                    android:background="@drawable/specifications"
                    android:padding="10dp"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Make -->
                <EditText
                    android:id="@+id/itemMake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:hint="Make"
                    android:background="@drawable/specifications"
...
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Model -->
                <EditText
                    android:id="@+id/itemModel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Model"
                    android:background="@drawable/specifications"
                    android:inputType="textPersonName"
...
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Comment -->
            <EditText
                android:id="@+id/itemComment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:hint="Comment"
                android:background="@drawable/specifications"
                android:gravity="top|left"
...
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemButton"
        android:layout_width="92dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
...
