...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileBar"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_View"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
...
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/valueAndButtonContainer"
        android:layout_below="@id/tagBar"
        android:padding="16dp" />

...
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp">
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        app:backgroundTint="#37756F"
...
        app:backgroundTint="#37756F"
        app:tint="#FFFFFF"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
...
        android:layout_marginBottom="91dp"
        android:clickable="true"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonTagItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:backgroundTint="#37756F"
        android:layout_marginEnd="17dp"
...
