<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tag_Item_View"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center">
</androidx.recyclerview.widget.RecyclerView>
