<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        android:background="@drawable/specifications"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/specifications"
            android:orientation="vertical"
            android:padding="24dp"
            >

            <ImageView
                android:id="@+id/imageViewItem_edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:visibility="visible"
                app:srcCompat="@drawable/i" />

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textColor="#294B58"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/specifications"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/baseline_mail_24"
                android:hint="Email"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="#7E7979"
                android:textColorHint="#6C6767"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/userid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/specifications"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/baseline_mail_24"
                android:hint="Username"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="#7E7979"
                android:textColorHint="#6C6767"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"

                android:background="@drawable/specifications"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:hint="Password"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textColorHint="#6C6767"
                android:textSize="20sp"
                android:textStyle="bold" />




            <Button
                android:id="@+id/waitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_blue_button"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/switch_tosignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="Already have an account? Login here."
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#6C6767"
                android:textColorHint="#6C6767"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>